tests/algorithms/x/Java/machine_learning/xgboost_classifier.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden525_xgboost_classifier1349664932/001/Main.java:54: error: method concat in class Main cannot be applied to given types;
                        left_1 = ((double[])(concat(left_1, new double[]{residuals[(int)((long)(j_1))]})));
                                             ^
  required: T[],T[]
  found:    double[],double[]
  reason: inference variable T has incompatible bounds
    equality constraints: double
    upper bounds: Object
  where T is a type-variable:
    T extends Object declared in method <T>concat(T[],T[])
/tmp/TestJavaTranspiler_Algorithms_Golden525_xgboost_classifier1349664932/001/Main.java:56: error: method concat in class Main cannot be applied to given types;
                        right_1 = ((double[])(concat(right_1, new double[]{residuals[(int)((long)(j_1))]})));
                                              ^
  required: T[],T[]
  found:    double[],double[]
  reason: inference variable T has incompatible bounds
    equality constraints: double
    upper bounds: Object
  where T is a type-variable:
    T extends Object declared in method <T>concat(T[],T[])
/tmp/TestJavaTranspiler_Algorithms_Golden525_xgboost_classifier1349664932/001/Main.java:91: error: method concat in class Main cannot be applied to given types;
            preds_1 = ((double[])(concat(preds_1, new double[]{0.0})));
                                  ^
  required: T[],T[]
  found:    double[],double[]
  reason: inference variable T has incompatible bounds
    equality constraints: double
    upper bounds: Object
  where T is a type-variable:
    T extends Object declared in method <T>concat(T[],T[])
/tmp/TestJavaTranspiler_Algorithms_Golden525_xgboost_classifier1349664932/001/Main.java:99: error: method concat in class Main cannot be applied to given types;
                residuals_1 = ((double[])(concat(residuals_1, new double[]{(double)(targets[(int)((long)(j_3))]) - (double)(preds_1[(int)((long)(j_3))])})));
                                          ^
  required: T[],T[]
  found:    double[],double[]
  reason: inference variable T has incompatible bounds
    equality constraints: double
    upper bounds: Object
  where T is a type-variable:
    T extends Object declared in method <T>concat(T[],T[])
4 errors
